# aoc2020

./: LICENSE  aoc2020.cabal  shell.nix
app/: Main.hs
src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Inputs.hs  TestInputs.hs
