name:                aoc2020
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              welp
maintainer:          welperooni@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
                     , Day7
                     , Day8
                     , Day9
                     , Day10
                     , Day11
                     , Day12
  other-modules:       Inputs
                     , TestInputs
  -- other-extensions:
  build-depends:       base
                     , recursion
                     , raw-strings-qq
                     , megaparsec
                     , containers
                     , array
                     , comonad
  hs-source-dirs:      src
  default-language:    Haskell2010

executable aoc2020
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , aoc2020
  hs-source-dirs:      app
  default-language:    Haskell2010
